--- a/source/scss/_buttons.scss
+++ b/source/scss/_buttons.scss
@@ -23,11 +23,11 @@
 
 .btn-white.btn-primary {
   background: #fff;
-  color: #ffb600;
+  color: #210beb;
 }
 
 .btn-primary {
-  background: #ffb600;
+  background: #210beb;
 }
 
 .btn-dark {
