--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -724,7 +724,7 @@ ul.navbar-nav > li > a {
 }
 ul.navbar-nav > li:hover > a,
 ul.navbar-nav > li.active > a {
-  color: #ffb600 !important;
+  color:#210beb !important;
 }
 
 /*-- Logo --*/
