--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -2835,7 +2835,7 @@ img.testimonial-thumb {
 
 /* Pricing featured */
 .ts-pricing-box.ts-pricing-featured .ts-pricing-header {
-  background: #ff9800;
+  background: #210beb;
 }
 
 /* Contact Us
